# transformers-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
models/: sampling.py
notebooks/: arxiv.ipynb  arxiv_categorization.ipynb  arxiv_summarization.ipynb  commonlit_readability.ipynb  europarl_translation.ipynb  florida_man.ipynb  florida_man_generation.ipynb
transformer/: __init__.py  params.py  utils.py
transformer/dataloaders/: __init__.py  causal.py  inference.py  seq2seq.py  teacher_forcing.py
transformer/decoding/: __init__.py  base.py  beam.py  greedy.py  nucleus.py  temperature.py  top_k.py
transformer/models/: __init__.py  base.py  causal.py  classifier.py  regressor.py  seq2seq.py
transformer/modules/: __init__.py  attention.py  block.py  embedding.py
transformer/modules/heads/: __init__.py
transformer/modules/transformers/: __init__.py  base.py  decoder_only.py  encoder_decoder.py  encoder_only.py
transformer/params/: __init__.py  decoding.py  transformer.py
transformer/transformers/: __init__.py  decoder_only.py
transformer/utils/: __init__.py  constants.py
transformer/utils/nn/: __init__.py  functional.py  layers.py
