[tool.poetry]
name = "transformer"
version = "0.1.0"
license = "MIT"
authors = ["Edwin Onuonga <ed@eonu.net>"]
maintainers = ["Edwin Onuonga <ed@eonu.net>"]
description = "Modular Python implementation of encoder-only, decoder-only and encoder-decoder transformer architectures from scratch, as detailed in Attention Is All You Need. "
classifiers = []
keywords = []
packages = [{ include = "transformer" }]
include = ["transformer", "pyproject.toml"]

[build-system]
requires = ['poetry-core~=1.0', 'Cython>=0.28.5']
build-backend = 'poetry.core.masonry.api'

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1"
torch = "^2"
lightning = "^2"
pydantic = "^2"
